--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ionic/react-router": "^4.11.0",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.41",
     "@material-ui/styles": "^4.8.2",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
